<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/edit_goal"
        android:orderInCategory="1"
        android:title="@string/edit_goal"
        android:icon="@drawable/ic_mode_edit_black_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/complete_goal"
        android:orderInCategory="2"
        android:title="@string/finish_goal"
        android:icon="@drawable/ic_done_black_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/jump_to_home"
        android:orderInCategory="3"
        android:title="@string/jump_to_home"
        app:showAsAction="never"/>

    <item
        android:id="@+id/delete_goal"
        android:orderInCategory="4"
        android:title="@string/delete_goal"
        android:icon="@drawable/ic_delete_black_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/logout"
        android:orderInCategory="5"
        android:title="@string/logout"
        app:showAsAction="never"/>

</menu>
